<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.coppernic.keyremappingsample.MainActivity">

    <Spinner
        android:id="@+id/spProgrammableButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:entries="@array/programmableKey"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programmable_key"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/tvVirtualKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/virtual_keys"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spProgrammableButtons"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spVirtualKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVirtualKeys"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/tvShortcuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/shortcuts"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spVirtualKeys"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spShortcuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShortcuts" />

    <Button
        android:id="@+id/btnRemapToVirtualKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remap"
        app:layout_constraintBottom_toBottomOf="@+id/spVirtualKeys"
        app:layout_constraintLeft_toRightOf="@+id/spVirtualKeys"
        app:layout_constraintTop_toTopOf="@+id/spVirtualKeys" />

    <Button
        android:id="@+id/btnRemapToShortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/remap"
        app:layout_constraintBottom_toBottomOf="@+id/spShortcuts"
        app:layout_constraintLeft_toRightOf="@+id/spShortcuts"
        app:layout_constraintTop_toTopOf="@+id/spShortcuts" />

    <Button
        android:id="@+id/btnGetRemapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/get_remapping"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spShortcuts" />

    <Button
        android:id="@+id/btnRemoveRemapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remove_remapping"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetRemapping" />

    <Button
        android:id="@+id/btnRemoveAllRemappings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remove_all_remappings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRemoveRemapping" />
</android.support.constraint.ConstraintLayout>
